parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> ID EQUAL expression
Rule 5     statement -> expression
Rule 6     statement -> IF LPAREN expression RPAREN block
Rule 7     statement -> IF LPAREN expression RPAREN block ELSE block
Rule 8     statement -> WHILE LPAREN expression RPAREN block
Rule 9     block -> LBRACE statements RBRACE
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression TIMES expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> expression LT expression
Rule 15    expression -> expression LE expression
Rule 16    expression -> expression GT expression
Rule 17    expression -> expression GE expression
Rule 18    expression -> expression EQ expression
Rule 19    expression -> expression NE expression
Rule 20    expression -> expression AND expression
Rule 21    expression -> expression OR expression
Rule 22    expression -> NOT expression
Rule 23    expression -> MINUS expression
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    expression -> NUMBER
Rule 26    expression -> ID

Terminals, with rules where they appear

AND                  : 20
DIVIDE               : 13
ELSE                 : 7
EQ                   : 18
EQUAL                : 4
GE                   : 17
GT                   : 16
ID                   : 4 26
IF                   : 6 7
LBRACE               : 9
LE                   : 15
LPAREN               : 6 7 8 24
LT                   : 14
MINUS                : 11 23
NE                   : 19
NOT                  : 22
NUMBER               : 25
OR                   : 21
PLUS                 : 10
RBRACE               : 9
RPAREN               : 6 7 8 24
TIMES                : 12
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

block                : 6 7 7 8
expression           : 4 5 6 7 8 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 23 24
program              : 0
statement            : 2 3
statements           : 1 2 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . ID EQUAL expression
    (5) statement -> . expression
    (6) statement -> . IF LPAREN expression RPAREN block
    (7) statement -> . IF LPAREN expression RPAREN block ELSE block
    (8) statement -> . WHILE LPAREN expression RPAREN block
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    ID              shift and go to state 4
    IF              shift and go to state 6
    WHILE           shift and go to state 8
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . ID EQUAL expression
    (5) statement -> . expression
    (6) statement -> . IF LPAREN expression RPAREN block
    (7) statement -> . IF LPAREN expression RPAREN block ELSE block
    (8) statement -> . WHILE LPAREN expression RPAREN block
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    $end            reduce using rule 1 (program -> statements .)
    ID              shift and go to state 4
    IF              shift and go to state 6
    WHILE           shift and go to state 8
    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11

    statement                      shift and go to state 12
    expression                     shift and go to state 5

state 3

    (3) statements -> statement .

    ID              reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    NOT             reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> ID . EQUAL expression
    (26) expression -> ID .

    EQUAL           shift and go to state 13
    PLUS            reduce using rule 26 (expression -> ID .)
    MINUS           reduce using rule 26 (expression -> ID .)
    TIMES           reduce using rule 26 (expression -> ID .)
    DIVIDE          reduce using rule 26 (expression -> ID .)
    LT              reduce using rule 26 (expression -> ID .)
    LE              reduce using rule 26 (expression -> ID .)
    GT              reduce using rule 26 (expression -> ID .)
    GE              reduce using rule 26 (expression -> ID .)
    EQ              reduce using rule 26 (expression -> ID .)
    NE              reduce using rule 26 (expression -> ID .)
    AND             reduce using rule 26 (expression -> ID .)
    OR              reduce using rule 26 (expression -> ID .)
    ID              reduce using rule 26 (expression -> ID .)
    IF              reduce using rule 26 (expression -> ID .)
    WHILE           reduce using rule 26 (expression -> ID .)
    NOT             reduce using rule 26 (expression -> ID .)
    LPAREN          reduce using rule 26 (expression -> ID .)
    NUMBER          reduce using rule 26 (expression -> ID .)
    $end            reduce using rule 26 (expression -> ID .)
    RBRACE          reduce using rule 26 (expression -> ID .)


state 5

    (5) statement -> expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LT expression
    (15) expression -> expression . LE expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression
    (20) expression -> expression . AND expression
    (21) expression -> expression . OR expression

  ! shift/reduce conflict for MINUS resolved as shift
    ID              reduce using rule 5 (statement -> expression .)
    IF              reduce using rule 5 (statement -> expression .)
    WHILE           reduce using rule 5 (statement -> expression .)
    NOT             reduce using rule 5 (statement -> expression .)
    LPAREN          reduce using rule 5 (statement -> expression .)
    NUMBER          reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    RBRACE          reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LT              shift and go to state 18
    LE              shift and go to state 19
    GT              shift and go to state 20
    GE              shift and go to state 21
    EQ              shift and go to state 22
    NE              shift and go to state 23
    AND             shift and go to state 24
    OR              shift and go to state 25

  ! MINUS           [ reduce using rule 5 (statement -> expression .) ]


state 6

    (6) statement -> IF . LPAREN expression RPAREN block
    (7) statement -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 26


state 7

    (24) expression -> LPAREN . expression RPAREN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 27

state 8

    (8) statement -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 29


state 9

    (23) expression -> MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 30

state 10

    (22) expression -> NOT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 31

state 11

    (25) expression -> NUMBER .

    PLUS            reduce using rule 25 (expression -> NUMBER .)
    MINUS           reduce using rule 25 (expression -> NUMBER .)
    TIMES           reduce using rule 25 (expression -> NUMBER .)
    DIVIDE          reduce using rule 25 (expression -> NUMBER .)
    LT              reduce using rule 25 (expression -> NUMBER .)
    LE              reduce using rule 25 (expression -> NUMBER .)
    GT              reduce using rule 25 (expression -> NUMBER .)
    GE              reduce using rule 25 (expression -> NUMBER .)
    EQ              reduce using rule 25 (expression -> NUMBER .)
    NE              reduce using rule 25 (expression -> NUMBER .)
    AND             reduce using rule 25 (expression -> NUMBER .)
    OR              reduce using rule 25 (expression -> NUMBER .)
    ID              reduce using rule 25 (expression -> NUMBER .)
    IF              reduce using rule 25 (expression -> NUMBER .)
    WHILE           reduce using rule 25 (expression -> NUMBER .)
    NOT             reduce using rule 25 (expression -> NUMBER .)
    LPAREN          reduce using rule 25 (expression -> NUMBER .)
    NUMBER          reduce using rule 25 (expression -> NUMBER .)
    $end            reduce using rule 25 (expression -> NUMBER .)
    RPAREN          reduce using rule 25 (expression -> NUMBER .)
    RBRACE          reduce using rule 25 (expression -> NUMBER .)


state 12

    (2) statements -> statements statement .

    ID              reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    NOT             reduce using rule 2 (statements -> statements statement .)
    MINUS           reduce using rule 2 (statements -> statements statement .)
    LPAREN          reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 13

    (4) statement -> ID EQUAL . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 32

state 14

    (10) expression -> expression PLUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 33

state 15

    (11) expression -> expression MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 34

state 16

    (12) expression -> expression TIMES . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 35

state 17

    (13) expression -> expression DIVIDE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 36

state 18

    (14) expression -> expression LT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 37

state 19

    (15) expression -> expression LE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 38

state 20

    (16) expression -> expression GT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 39

state 21

    (17) expression -> expression GE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 40

state 22

    (18) expression -> expression EQ . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 41

state 23

    (19) expression -> expression NE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 42

state 24

    (20) expression -> expression AND . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 43

state 25

    (21) expression -> expression OR . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 44

state 26

    (6) statement -> IF LPAREN . expression RPAREN block
    (7) statement -> IF LPAREN . expression RPAREN block ELSE block
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 45

state 27

    (24) expression -> LPAREN expression . RPAREN
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LT expression
    (15) expression -> expression . LE expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression
    (20) expression -> expression . AND expression
    (21) expression -> expression . OR expression

    RPAREN          shift and go to state 46
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LT              shift and go to state 18
    LE              shift and go to state 19
    GT              shift and go to state 20
    GE              shift and go to state 21
    EQ              shift and go to state 22
    NE              shift and go to state 23
    AND             shift and go to state 24
    OR              shift and go to state 25


state 28

    (26) expression -> ID .

    RPAREN          reduce using rule 26 (expression -> ID .)
    PLUS            reduce using rule 26 (expression -> ID .)
    MINUS           reduce using rule 26 (expression -> ID .)
    TIMES           reduce using rule 26 (expression -> ID .)
    DIVIDE          reduce using rule 26 (expression -> ID .)
    LT              reduce using rule 26 (expression -> ID .)
    LE              reduce using rule 26 (expression -> ID .)
    GT              reduce using rule 26 (expression -> ID .)
    GE              reduce using rule 26 (expression -> ID .)
    EQ              reduce using rule 26 (expression -> ID .)
    NE              reduce using rule 26 (expression -> ID .)
    AND             reduce using rule 26 (expression -> ID .)
    OR              reduce using rule 26 (expression -> ID .)
    ID              reduce using rule 26 (expression -> ID .)
    IF              reduce using rule 26 (expression -> ID .)
    WHILE           reduce using rule 26 (expression -> ID .)
    NOT             reduce using rule 26 (expression -> ID .)
    LPAREN          reduce using rule 26 (expression -> ID .)
    NUMBER          reduce using rule 26 (expression -> ID .)
    $end            reduce using rule 26 (expression -> ID .)
    RBRACE          reduce using rule 26 (expression -> ID .)


state 29

    (8) statement -> WHILE LPAREN . expression RPAREN block
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . NOT expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . ID

    NOT             shift and go to state 10
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 11
    ID              shift and go to state 28

    expression                     shift and go to state 47

state 30

    (23) expression -> MINUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LT expression
    (15) expression -> expression . LE expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression
    (20) expression -> expression . AND expression
    (21) expression -> expression . OR expression

    PLUS            reduce using rule 23 (expression -> MINUS expression .)
    MINUS           reduce using rule 23 (expression -> MINUS expression .)
    TIMES           reduce using rule 23 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 23 (expression -> MINUS expression .)
    LT              reduce using rule 23 (expression -> MINUS expression .)
    LE              reduce using rule 23 (expression -> MINUS expression .)
    GT              reduce using rule 23 (expression -> MINUS expression .)
    GE              reduce using rule 23 (expression -> MINUS expression .)
    EQ              reduce using rule 23 (expression -> MINUS expression .)
    NE              reduce using rule 23 (expression -> MINUS expression .)
    AND             reduce using rule 23 (expression -> MINUS expression .)
    OR              reduce using rule 23 (expression -> MINUS expression .)
    ID              reduce using rule 23 (expression -> MINUS expression .)
    IF              reduce using rule 23 (expression -> MINUS expression .)
    WHILE           reduce using rule 23 (expression -> MINUS expression .)
    NOT             reduce using rule 23 (expression -> MINUS expression .)
    LPAREN          reduce using rule 23 (expression -> MINUS expression .)
    NUMBER          reduce using rule 23 (expression -> MINUS expression .)
    $end            reduce using rule 23 (expression -> MINUS expression .)
    RPAREN          reduce using rule 23 (expression -> MINUS expression .)
    RBRACE          reduce using rule 23 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! LT              [ shift and go to state 18 ]
  ! LE              [ shift and go to state 19 ]
  ! GT              [ shift and go to state 20 ]
  ! GE              [ shift and go to state 21 ]
  ! EQ              [ shift and go to state 22 ]
  ! NE              [ shift and go to state 23 ]
  ! AND             [ shift and go to state 24 ]
  ! OR              [ shift and go to state 25 ]


state 31

    (22) expression -> NOT expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . LT expression
    (15) expression -> expression . LE expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression
    (20) expression -> expression . AND expression
    (21) expression -> expression . OR expression

    AND             reduce using rule 22 (expression -> NOT expression .)
    OR              reduce using rule 22 (expression -> NOT expression .)
    ID              reduce using rule 22 (expression -> NOT expression .)
    IF              reduce using rule 22 (expression -> NOT expression .)
    WHILE           reduce using rule 22 (expression -> NOT expression .)
    NOT             reduce using rule 22 (expression -> NOT expression .)
    LPAREN          reduce using rule 22 (expression -> NOT expression .)
    NUMBER          reduce using rule 22 (expression -> NOT expression .)
    $end            reduce using rule 22 (expression -> NOT expression .)
    RPAREN          reduce using rule 22 (expression -> NOT expression .)
    RBRACE          reduce using rule 22 (expression -> NOT expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    LT              shift and go to state 18
    LE              shift and go to state 19
    GT              shift and go to state 20
    GE              shift and go to state 21
    EQ              shift and go to state 22
    NE              shift and go to state 23

  ! PLUS            [ reduce using rule 22 (expression -> NOT expression .) ]
  ! MINUS           [ reduce using rule 22 (expression -> NOT expression .) ]
  ! TIMES           [ reduce using rule 22 (expression -> NOT expression .) ]
  ! DIVIDE          [ reduce using rule 22 (expression -> NOT expression .) ]
  ! LT              [ reduce using rule 22 (expression -> NOT expression .) ]
  ! LE              [ reduce using rule 22 (expression -> NOT expression .) ]
  ! GT              [ reduce using rule 22 (expression -> NOT expression .) ]
  ! GE              [ reduce using rule 22 (expression -> NOT expression .) ]
  ! EQ              [ reduce using rule 22 (expression -> NOT expression .) ]
  ! NE              [ reduce using rule 22 (expression -> NOT expression .) ]
  ! AND             [ shift and go to state 24 ]
  ! OR              [ shift and go to state 25 ]


state 32
